--- a/index.html
+++ b/index.html
@@ -35,6 +35,17 @@
 
 
 
+    </section><br><br>
+
+
+    <section id="addingtwonumbers">
+
+
+      <div id="text">Enter first number:</div>
+      <input type="text" id="number">
+      <button onclick="add(number.value)">Click Me</button>
+      <div id="displayadd"></div>
+
     </section>
 
 
